fix small screen overlaping buttons

--- a/app/packs/stylesheets/decidim/reporting_proposals/geocoding_addons.scss
+++ b/app/packs/stylesheets/decidim/reporting_proposals/geocoding_addons.scss
@@ -21,4 +21,14 @@
       }
     }
   }
+
+  @media only screen and (max-width: 596px) {
+    display: block !important;
+    margin-top: 1rem;
+    margin-bottom: -.5rem;
+
+    button {
+      border-radius: 4px !important;
+    }
+  }
 }
