--- a/app/packs/stylesheets/decidim/reporting_proposals/user_camera_inputs.scss
+++ b/app/packs/stylesheets/decidim/reporting_proposals/user_camera_inputs.scss
@@ -7,3 +7,13 @@ button.user-device-camera {
   margin-top: -1rem;
   text-align: right;
 }
+
+@media only screen and (max-width: 596px) {
+  .gallery__container .input-group .input-group-button {
+    display: block;
+  }
+
+  .has_no_image {
+    margin-top: -.5rem;
+  }
+}
